ensure words can wrap

--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,7 @@ a:hover { color: #4f2424; }
         width: 90%;
         display: flex;
         flex-direction: row;
+        word-wrap: normal;
         #left {
             min-width: 45%;
         }
